[gd_scene load_steps=8 format=3 uid="uid://djiijshkeheyn"]

[ext_resource type="Script" path="res://games/gem_match/scripts/Menu.gd" id="1"]
[ext_resource type="FontFile" uid="uid://lfx73a34jolm" path="res://assets/font/vetka.ttf" id="2_font"]
[ext_resource type="Texture2D" uid="uid://1iymo6a4x26p" path="res://games/gem_match/assets/BG.png" id="3_cbor3"]
[ext_resource type="Texture2D" uid="uid://dl0wetvwuq73w" path="res://games/gem_match/assets/Logo_gem.png" id="4_480jh"]
[ext_resource type="Texture2D" uid="uid://ccexwl5lgc1cn" path="res://games/gem_match/assets/START_normal.png" id="6_ef1nh"]
[ext_resource type="Texture2D" uid="uid://bhqs3tubwyn0r" path="res://games/gem_match/assets/START_pressed.png" id="7_8dfl1"]
[ext_resource type="AudioStream" uid="uid://d07andchlek7f" path="res://games/gem_match/assets/sfx/no_match.mp3" id="8_click"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.35
anchor_right = 0.75
anchor_bottom = 0.65
offset_left = 5.0
offset_top = 182.0
offset_right = -5.0
offset_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="StartButton" type="Button" parent="Panel/VBox"]
visible = false
custom_minimum_size = Vector2(0, 115)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "Start Game"

[node name="Bg" type="Sprite2D" parent="."]
z_index = -999
position = Vector2(270, 480)
scale = Vector2(0.499284, 0.499284)
texture = ExtResource("3_cbor3")

[node name="LogoGem" type="Sprite2D" parent="."]
position = Vector2(269, 295)
scale = Vector2(0.601113, 0.601113)
texture = ExtResource("4_480jh")

[node name="Start" type="TextureButton" parent="."]
z_index = 999
layout_mode = 0
offset_left = 128.0
offset_top = 491.0
offset_right = 688.0
offset_bottom = 806.0
scale = Vector2(0.517, 0.517)
texture_normal = ExtResource("6_ef1nh")
texture_pressed = ExtResource("7_8dfl1")

[node name="BackButton" type="Button" parent="."]
z_index = 999
layout_mode = 0
offset_left = 135.0
offset_top = 693.0
offset_right = 413.0
offset_bottom = 804.0
theme_override_colors/font_color = Color(1, 0.945098, 0.627451, 1)
theme_override_colors/font_outline_color = Color(0.219608, 0.164706, 0.152941, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 44
text = "â€¹"
flat = true

[node name="SfxClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_click")

[connection signal="pressed" from="Panel/VBox/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
